# builderpulse

./: .dockerignore  .gitignore  AWESOME_SUBMISSION.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  _config.yml  config.example.json  docker-compose.yml  mcp-config.example.json  pyproject.toml
.builderpulse/dev/reviews/: FINAL-WRAP-UP-2026-06-26.md  SESSION-WRAP-UP-2026-06-26.md
.builderpulse/dev/reviews/c1-prompt-registry/: R0-self-check.md  R1a-V1-test-coverage.md  R1a-V2-integration.md  R1a-V3-production.md  R1a-verifiers.md  R1b-adversarial.md  R2-audit.md  R3-residual.md
.builderpulse/dev/reviews/s31-lightrag-roles/: R0-self-check.md  R1a-verifiers.md  R1b-adversarial.md  R2-audit.md  R3-residual.md
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/workflows/: actions-usage-monitor.yml  ci.yml  generate-feed.yml  pages.yml  release.yml  smoke.yml  test.yml  test_universal_adapter.yml
docs/: CONCURRENCY.md  RELEASE_CHECKLIST_v2.1.0.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.1.0.md  architecture.md  blog-builderpulse-zh.md  blog-rag-hybrid-search-zh.md  ci-followup-failures.md  error-codes.md  migration-v2.1.md  migration-v2.md  plugins.md  smoke-secrets.md  subagent-security-template.md
docs/launch/: v2.1.0-launch.md
docs/superpowers/plans/: 2026-06-03-builderpulse-implementation.md
docs/superpowers/specs/: 2026-06-03-builderpulse-design.md
prompts/: digest-intro.md  summarize-bilibili.md
scripts/: check_entry_points_sorted.py  check_pyproject_format.py  fix-runner-pin.py  plan_d_retro_v0_1.py  plan_d_retro_v0_2.py  plan_d_retro_v0_3.py  update_feeds.py
scripts/plan_d/: __init__.py  _store.py
skills/builderpulse/: SKILL.md
src/builderpulse/: __init__.py  __main__.py  cli.py  mcp_server.py  migrate.py
src/builderpulse/agents/: orchestrator.py
src/builderpulse/batch/: __init__.py  cache.py  disk_guard.py  manager.py  rate_limiter.py  retry.py
src/builderpulse/core/: __init__.py  config.py  config_manager.py  error_codes.py  models.py  pipeline.py  shared_utils.py  source_aggregator.py  state.py
src/builderpulse/deliver/: __init__.py  bark.py  base.py  dingtalk.py  discord.py  email_sender.py  lark.py  notion.py  notion_page.py  slack.py  stderr_fallback.py  telegram.py  webhook.py  wechat.py  wecom.py
src/builderpulse/engines/downloaders/: __init__.py  base.py  bilibili.py  douyin.py  yt_dlp.py
src/builderpulse/engines/transcribers/: __init__.py  base.py  faster_whisper.py  whisper.py  whisperx.py
src/builderpulse/infra/: agent_output.py  cache.py  i18n.py  logger.py  observability.py  performance.py  platform_compat.py  progress.py  secrets.py  security.py
src/builderpulse/llm/: universal_adapter.py
src/builderpulse/plugins/: __init__.py  registry.py
src/builderpulse/rag/: __init__.py  channel.py
src/builderpulse/remix/: __init__.py  prompt_registry.py  prompts.py  roles.py  summarizer.py  translator.py
src/builderpulse/sources/: __init__.py  bilibili.py  blog.py  github_trending.py  podcast.py  twitch.py  twitter.py  wechat_mp.py  xiaohongshu.py  youtube.py
tests/: conftest.py  test_agent_output.py  test_batch_cache.py  test_batch_flow.py  test_batch_manager.py  test_batch_manager_run.py  test_bilibili_downloader.py  test_bilibili_wbi_cache.py  test_blog_date.py  test_channel_bark.py  test_channel_bark_entry_point.py  test_channel_notion.py  test_channel_notion_entry_point.py  test_channel_slack.py  test_channel_slack_entry_point.py  test_channel_webhook.py  test_channel_webhook_entry_point.py  test_cli.py  test_cli_config.py  test_config.py  test_config_manager.py  test_config_migration.py  test_deliver.py  test_delivery_channels.py  test_disk_guard.py  test_douyin_downloader.py  test_downloaders.py  test_error_codes.py  test_experimental_plugin_proxy.py  test_i18n_drift.py  test_infra.py  test_integration_all_entry_points.py  test_log_sanitization.py  test_logger.py  test_mcp.py  test_mcp_handlers.py  test_migrate.py  test_models.py  test_observability.py  test_performance.py  (+28 more)
tests/fixtures/github_trending/: v1.html
