[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "builderpulse"
version = "2.2.0"
description = "Track what AI builders are saying — transcripts, digests, and insights delivered to you."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
    "pydantic>=2.0",
    "rich>=13.0",
    "python-dateutil>=2.8",
]

[project.entry-points."builderpulse.sources"]
bilibili = "builderpulse.sources.bilibili:BilibiliSource"
blog = "builderpulse.sources.blog:BlogSource"
github_trending = "builderpulse.sources.github_trending:GitHubTrendingSource"
podcast = "builderpulse.sources.podcast:PodcastSource"
twitch = "builderpulse.sources.twitch:TwitchSource"
twitter = "builderpulse.sources.twitter:TwitterSource"
wechat_mp = "builderpulse.sources.wechat_mp:WeChatMPSource"
xiaohongshu = "builderpulse.sources.xiaohongshu:XiaohongshuSource"
youtube = "builderpulse.sources.youtube:YouTubeSource"

[project.entry-points."builderpulse.channels"]
bark = "builderpulse.deliver.bark:BarkChannel"
dingtalk = "builderpulse.deliver.dingtalk:DingTalkChannel"
discord = "builderpulse.deliver.discord:DiscordChannel"
email = "builderpulse.deliver.email_sender:EmailChannel"
lark = "builderpulse.deliver.lark:LarkChannel"
notion = "builderpulse.deliver.notion:NotionChannel"
slack = "builderpulse.deliver.slack:SlackChannel"
stderr = "builderpulse.deliver.stderr_fallback:StderrChannel"
telegram = "builderpulse.deliver.telegram:TelegramChannel"
webhook = "builderpulse.deliver.webhook:WebhookChannel"
wechat = "builderpulse.deliver.wechat:WeChatChannel"
wecom = "builderpulse.deliver.wecom:WeComChannel"

[project.optional-dependencies]
# Transcription engines (pick ONE — they conflict)
whisper = ["openai-whisper>=20231117", "torch>=2.0", "torchaudio>=2.0", "numpy<3"]
whisperx = ["whisperx>=3.1.1", "torch>=2.0", "torchaudio>=2.0", "pyannote.audio>=3.0", "numpy<3"]
faster-whisper = ["faster-whisper>=0.10", "numpy<3"]
# Browser automation (Bilibili + Douyin browser mode)
browser = ["playwright>=1.40"]
# Content sources
sources = ["feedparser>=6.0", "beautifulsoup4>=4.12", "tweepy>=4.14"]
# GitHub Trending + Releases (HTML scrape needs beautifulsoup4)
github = ["beautifulsoup4>=4.12"]
# Twitch VODs (uses httpx, already a core dep — extra exists for discoverability)
twitch = ["httpx>=0.24"]
# LLM providers
llm = ["openai>=1.0", "anthropic>=0.20", "ollama>=0.1"]
# MCP server
mcp = ["mcp>=1.0"]
# Keyring for secrets
secrets = ["keyring>=24.0"]
# CPU-only variant (no CUDA)
cpu = ["openai-whisper>=20231117", "torch>=2.0", "torchaudio>=2.0", "numpy<3"]
# Dev
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "respx>=0.21",
    "tomli>=2.0",  # for scripts/check_entry_points_sorted.py on 3.9/3.10
    # Needed by tests that import from sources/* (CI without [sources])
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",  # for github source tests in CI without [github]
    # httpx is a core dep, but list here too for [twitch] tests in CI
    "httpx>=0.24",
]

[project.scripts]
bp = "builderpulse.cli:main"
builderpulse-mcp = "builderpulse.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
builderpulse = ["prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "asyncio: marks tests as async (requires pytest-asyncio)",
    "smoke: live integration smoke tests (run via nightly smoke workflow; require SMOKE_* secrets)",
]
